--- a/pom.xml
+++ b/pom.xml
@@ -673,7 +673,13 @@
       <version>1.9.5</version>
       <scope>test</scope>
     </dependency>
-    <!-- grpc end -->
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
+      <!-- grpc end -->
     
   </dependencies>
   <build>
